Fix font size of code blocks
It was too big

--- a/web/assets/styles/site.styl
+++ b/web/assets/styles/site.styl
@@ -49,7 +49,8 @@ pre {
   max-height: 30em;
   overflow: auto;
   background-color: $colorBackgroundDim;
-  line-height: 1.5em;
+  font-size: 0.85em;
+  line-height: 1.6em;
 }
 
 
